force-app/main/default/objects/vlocity_ins__ProfilingSegment__c/fields/vlocity_ins__ActiveFlg__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ActiveFlg__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active Flag on Segment</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>