force-app/main/default/objects/vlocity_ins__ProfilingSegment__c/fields/vlocity_ins__Configurable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Configurable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to display if this attribute should be configured or not</description>
    <label>Configurable</label>
    <type>Checkbox</type>
</CustomField>