force-app/main/default/objects/vlocity_ins__ProfilingSegment__c/fields/vlocity_ins__ProfSegCategory__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProfSegCategory__c</fullName>
    <description>Parent segment category</description>
    <label>Profiling Segment Category</label>
    <referenceTo>vlocity_ins__ProfilingSegmentCategory__c</referenceTo>
    <relationshipName>ProfilingSegments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>